before users work

--- a/src/app/allcontract/allcontract.component.html
+++ b/src/app/allcontract/allcontract.component.html
@@ -37,20 +37,20 @@
                         class="btn btn-primary rounded-circle rounded-circle-sm mr-2">
                         <i class="fa fa-money"> </i>
                     </span>
-                    <span [routerLink]="['/contract/memo/'+item['contractId']]"
+                    <!-- <span [routerLink]="['/contract/memo/'+item['contractId']]"
                         class="btn btn-primary rounded-circle rounded-circle-sm mr-2">
-                        <!-- <i class="fa fa-one"> </i> -->
+                         <i class="fa fa-one"> </i> 
                         <b>1</b>
                     </span>
                     <span [routerLink]="['/contract/memo/'+item['contractId']]"
                         class="btn btn-primary rounded-circle rounded-circle-sm mr-2">
-                        <!-- <i class="fa fa-one"> </i> -->
+                         <i class="fa fa-one"> </i>
                         <b>2</b>
-                    </span>
-                    <span class="btn btn-danger rounded-circle rounded-circle-sm">
+                    </span> -->
+                    <!-- <span class="btn btn-danger rounded-circle rounded-circle-sm">
                         <i class="fa fa-trash"> </i>
 
-                    </span>
+                    </span> -->
                 </td>
             </tr>
 
