before major project revamp

--- a/src/app/allcontract/allcontract.component.html
+++ b/src/app/allcontract/allcontract.component.html
@@ -47,10 +47,11 @@
                          <i class="fa fa-one"> </i>
                         <b>2</b>
                     </span> -->
-                    <!-- <span class="btn btn-danger rounded-circle rounded-circle-sm">
+                    <span class="btn btn-danger rounded-circle rounded-circle-sm"
+                        (click)="deleteContract(item['contractId'])">
                         <i class="fa fa-trash"> </i>
 
-                    </span> -->
+                    </span>
                 </td>
             </tr>
 
