--- a/src/app/cost-breakdown/cost-breakdown.component.html
+++ b/src/app/cost-breakdown/cost-breakdown.component.html
@@ -271,4 +271,8 @@
             </tr>
         </tbody>
     </table>
+
+    <div class="noprint m-5">
+        <button (click)="printPage()"> Print </button>
+    </div>
 </div>
