--- a/src/app/superadmin/superadmin.component.html
+++ b/src/app/superadmin/superadmin.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-3 mb-3">
-  <div class="btn btn-success float-right" data-toggle="modal" data-target="#createuser">
+  <div class="btn btn-success float-right" data-toggle="modal" data-target="#createuser" (click)="getAllPm()">
     <i class="fa fa-plus"> </i> Add +
   </div>
 </div>
@@ -54,18 +54,33 @@
 
 
         <form [formGroup]="userForm">
+          <div class="form-group col-md-6">
+            <label for="inputState">Role</label>
+            <select id="inputState" class="form-control" formControlName="role">
+              <option selected value="user">user</option>
+              <option value="admin">admin</option>
+            </select>
+          </div>
           <div class="form-row">
             <div class="form-group col-md-6">
-              <label for="inputEmail4">User ID</label>
-              <input type="email" class="form-control" id="inputEmail4" placeholder="User ID"
-                formControlName="userName">
-            </div>
-            <div class="form-group col-md-6">
-              <label for="inputState">Role</label>
-              <select id="inputState" class="form-control" formControlName="role">
-                <option selected>user</option>
-                <option>admin</option>
-              </select>
+
+              <div *ngIf="userForm.value.role=='user'">
+                <label for="inputState">Portfolio managers</label>
+                <select id="inputState" class="form-control" (change)="change($event.target.value)">
+                  <option value="">-select-</option>
+                  <option *ngFor="let item of allPm" [value]="item.personCode">
+                    {{ item['personCode']+' || '+item['firstName']+' '+item['middleName']+' '+item['lastName']}}
+                  </option>
+                </select>
+              </div>
+
+              <div>
+                <label for="inputEmail4">User Name</label>
+                <input type="email" class="form-control" id="inputEmail4" placeholder="User Name"
+                  formControlName="userName">
+              </div>
+
+
             </div>
           </div>
 
